# n8nrollup

./: .gitignore  ORBIT_BUILDER_README.md  README.md  SYSTEM_PRD.md  WORKFLOW_DIAGRAM.md
AI_workflow_backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py
backend/: API_DOCUMENTATION.md  STRUCTURE.md  TESTING_GUIDE.md  app.js  package-lock.json  package.json
backend/config/: abis.js  constants.js
backend/controllers/: nftController.js  orbitController.js  priceController.js  tokenController.js  transferController.js
backend/routes/: healthRoutes.js  nftRoutes.js  orbitRoutes.js  tokenRoutes.js  transferRoutes.js
backend/utils/: blockchain.js  helpers.js  orbitDeployer.js
contract/nft_factory/: .env.example  COMPLETE_DEPLOYMENT_GUIDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  complete_deployment.sh  deploy.sh  nft_abi.json  test_nft_factory.sh
contract/nft_factory/src/: erc721.rs  factory.rs  lib.rs  lib.rs.bak  main.rs
contract/token_factory/: Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  deploy.sh  package.json
frontend/: ARCHITECTURE_DIAGRAM.md  COMPONENTS_SHOWCASE.md  CONTRACT_EXPLORER.md  CONTRACT_EXPLORER_QUICKSTART.md  CONTRACT_EXPLORER_SETUP.md  CONTRACT_EXPLORER_SUMMARY.md  CREDENTIALS_SETUP.md  DATABASE_SCHEMA.sql  DEBUG_CHECKLIST.md  FRONTEND_BACKEND_INTEGRATION.md  INTEGRATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  README.md  SUPABASE_SETUP.sql  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
n8n_agent_backend/: main.py  requests.md  requirements.txt
(+34 files in other folders)
